- Fix bug Invalid Date on heroVillainService.ts - Align inline hero list

--- a/src/app/components/tournament-hero-list/tournament-hero-list.component.scss
+++ b/src/app/components/tournament-hero-list/tournament-hero-list.component.scss
@@ -1,8 +1,14 @@
 :host {
+	display: flex;
+
+	flex-wrap: wrap;
 	heroe-villain {
-		display: block;
+		display: inline-block;
 
 		min-width: 220px;
 		margin: 15px;
+		&:hover {
+			cursor: pointer;
+		}
 	}
 }
