--- a/src/app/pages/tournament/tournament.component.scss
+++ b/src/app/pages/tournament/tournament.component.scss
@@ -3,3 +3,9 @@
 
 	flex-wrap: wrap;
 }
+
+:host {
+	display: block;
+
+	width: 100%;
+}
